cbits/river-xkb-bindings-v1-client-protocol.h

/* Generated by wayland-scanner 1.24.0 */

#ifndef RIVER_XKB_BINDINGS_V1_CLIENT_PROTOCOL_H
#define RIVER_XKB_BINDINGS_V1_CLIENT_PROTOCOL_H

#include <stdint.h>
#include <stddef.h>
#include "wayland-client-core.h"

#ifdef  __cplusplus
extern "C" {
#endif

/**
 * @page page_river_xkb_bindings_v1 The river_xkb_bindings_v1 protocol
 * xkbcommon-based key bindings
 *
 * @section page_desc_river_xkb_bindings_v1 Description
 *
 * This protocol allows the river-window-management-v1 window manager to
 * define key bindings in terms of xkbcommon keysyms and other configurable
 * properties.
 *
 * The key words "must", "must not", "required", "shall", "shall not",
 * "should", "should not", "recommended", "may", and "optional" in this
 * document are to be interpreted as described in IETF RFC 2119.
 *
 * @section page_ifaces_river_xkb_bindings_v1 Interfaces
 * - @subpage page_iface_river_xkb_bindings_v1 - xkbcommon bindings global interface
 * - @subpage page_iface_river_xkb_binding_v1 - configure a xkb key binding, receive trigger events
 * - @subpage page_iface_river_xkb_bindings_seat_v1 - xkb bindings seat
 * @section page_copyright_river_xkb_bindings_v1 Copyright
 * <pre>
 *
 * SPDX-FileCopyrightText: © 2025 Isaac Freund
 * SPDX-License-Identifier: MIT
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to
 * deal in the Software without restriction, including without limitation the
 * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 * IN THE SOFTWARE.
 * </pre>
 */
struct river_seat_v1;
struct river_xkb_binding_v1;
struct river_xkb_bindings_seat_v1;
struct river_xkb_bindings_v1;

#ifndef RIVER_XKB_BINDINGS_V1_INTERFACE
#define RIVER_XKB_BINDINGS_V1_INTERFACE
/**
 * @page page_iface_river_xkb_bindings_v1 river_xkb_bindings_v1
 * @section page_iface_river_xkb_bindings_v1_desc Description
 *
 * This global interface should only be advertised to the client if the
 * river_window_manager_v1 global is also advertised.
 * @section page_iface_river_xkb_bindings_v1_api API
 * See @ref iface_river_xkb_bindings_v1.
 */
/**
 * @defgroup iface_river_xkb_bindings_v1 The river_xkb_bindings_v1 interface
 *
 * This global interface should only be advertised to the client if the
 * river_window_manager_v1 global is also advertised.
 */
extern const struct wl_interface river_xkb_bindings_v1_interface;
#endif
#ifndef RIVER_XKB_BINDING_V1_INTERFACE
#define RIVER_XKB_BINDING_V1_INTERFACE
/**
 * @page page_iface_river_xkb_binding_v1 river_xkb_binding_v1
 * @section page_iface_river_xkb_binding_v1_desc Description
 *
 * This object allows the window manager to configure a xkbcommon key binding
 * and receive events when the key binding is triggered.
 *
 * The new key binding is not enabled until the enable request is made during
 * a manage sequence.
 *
 * Normally, all key events are sent to the surface with keyboard focus by
 * the compositor. Key events that trigger a key binding are not sent to the
 * surface with keyboard focus.
 *
 * If multiple key bindings would be triggered by a single physical key event
 * on the compositor side, it is compositor policy which key binding(s) will
 * receive press/release events or if all of the matched key bindings receive
 * press/release events.
 *
 * Key bindings might be matched by the same physical key event due to shared
 * keysym and modifiers. The layout override feature may also cause the same
 * physical key event to trigger two key bindings with different keysyms and
 * different layout overrides configured.
 * @section page_iface_river_xkb_binding_v1_api API
 * See @ref iface_river_xkb_binding_v1.
 */
/**
 * @defgroup iface_river_xkb_binding_v1 The river_xkb_binding_v1 interface
 *
 * This object allows the window manager to configure a xkbcommon key binding
 * and receive events when the key binding is triggered.
 *
 * The new key binding is not enabled until the enable request is made during
 * a manage sequence.
 *
 * Normally, all key events are sent to the surface with keyboard focus by
 * the compositor. Key events that trigger a key binding are not sent to the
 * surface with keyboard focus.
 *
 * If multiple key bindings would be triggered by a single physical key event
 * on the compositor side, it is compositor policy which key binding(s) will
 * receive press/release events or if all of the matched key bindings receive
 * press/release events.
 *
 * Key bindings might be matched by the same physical key event due to shared
 * keysym and modifiers. The layout override feature may also cause the same
 * physical key event to trigger two key bindings with different keysyms and
 * different layout overrides configured.
 */
extern const struct wl_interface river_xkb_binding_v1_interface;
#endif
#ifndef RIVER_XKB_BINDINGS_SEAT_V1_INTERFACE
#define RIVER_XKB_BINDINGS_SEAT_V1_INTERFACE
/**
 * @page page_iface_river_xkb_bindings_seat_v1 river_xkb_bindings_seat_v1
 * @section page_iface_river_xkb_bindings_seat_v1_desc Description
 *
 * This object manages xkb bindings state associated with a specific seat.
 * @section page_iface_river_xkb_bindings_seat_v1_api API
 * See @ref iface_river_xkb_bindings_seat_v1.
 */
/**
 * @defgroup iface_river_xkb_bindings_seat_v1 The river_xkb_bindings_seat_v1 interface
 *
 * This object manages xkb bindings state associated with a specific seat.
 */
extern const struct wl_interface river_xkb_bindings_seat_v1_interface;
#endif

#ifndef RIVER_XKB_BINDINGS_V1_ERROR_ENUM
#define RIVER_XKB_BINDINGS_V1_ERROR_ENUM
enum river_xkb_bindings_v1_error {
	/**
	 * @since 2
	 */
	RIVER_XKB_BINDINGS_V1_ERROR_OBJECT_ALREADY_CREATED = 0,
};
/**
 * @ingroup iface_river_xkb_bindings_v1
 */
#define RIVER_XKB_BINDINGS_V1_ERROR_OBJECT_ALREADY_CREATED_SINCE_VERSION 2
#endif /* RIVER_XKB_BINDINGS_V1_ERROR_ENUM */

#define RIVER_XKB_BINDINGS_V1_DESTROY 0
#define RIVER_XKB_BINDINGS_V1_GET_XKB_BINDING 1
#define RIVER_XKB_BINDINGS_V1_GET_SEAT 2


/**
 * @ingroup iface_river_xkb_bindings_v1
 */
#define RIVER_XKB_BINDINGS_V1_DESTROY_SINCE_VERSION 1
/**
 * @ingroup iface_river_xkb_bindings_v1
 */
#define RIVER_XKB_BINDINGS_V1_GET_XKB_BINDING_SINCE_VERSION 1
/**
 * @ingroup iface_river_xkb_bindings_v1
 */
#define RIVER_XKB_BINDINGS_V1_GET_SEAT_SINCE_VERSION 2

/** @ingroup iface_river_xkb_bindings_v1 */
static inline void
river_xkb_bindings_v1_set_user_data(struct river_xkb_bindings_v1 *river_xkb_bindings_v1, void *user_data)
{
	wl_proxy_set_user_data((struct wl_proxy *) river_xkb_bindings_v1, user_data);
}

/** @ingroup iface_river_xkb_bindings_v1 */
static inline void *
river_xkb_bindings_v1_get_user_data(struct river_xkb_bindings_v1 *river_xkb_bindings_v1)
{
	return wl_proxy_get_user_data((struct wl_proxy *) river_xkb_bindings_v1);
}

static inline uint32_t
river_xkb_bindings_v1_get_version(struct river_xkb_bindings_v1 *river_xkb_bindings_v1)
{
	return wl_proxy_get_version((struct wl_proxy *) river_xkb_bindings_v1);
}

/**
 * @ingroup iface_river_xkb_bindings_v1
 *
 * This request indicates that the client will no longer use the
 * river_xkb_bindings_v1 object.
 */
static inline void
river_xkb_bindings_v1_destroy(struct river_xkb_bindings_v1 *river_xkb_bindings_v1)
{
	wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_bindings_v1,
			 RIVER_XKB_BINDINGS_V1_DESTROY, NULL, wl_proxy_get_version((struct wl_proxy *) river_xkb_bindings_v1), WL_MARSHAL_FLAG_DESTROY);
}

/**
 * @ingroup iface_river_xkb_bindings_v1
 *
 * Define a key binding for the given seat in terms of an xkbcommon keysym
 * and other configurable properties.
 *
 * The new key binding is not enabled until initial configuration is
 * completed and the enable request is made during a manage sequence.
 */
static inline struct river_xkb_binding_v1 *
river_xkb_bindings_v1_get_xkb_binding(struct river_xkb_bindings_v1 *river_xkb_bindings_v1, struct river_seat_v1 *seat, uint32_t keysym, uint32_t modifiers)
{
	struct wl_proxy *id;

	id = wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_bindings_v1,
			 RIVER_XKB_BINDINGS_V1_GET_XKB_BINDING, &river_xkb_binding_v1_interface, wl_proxy_get_version((struct wl_proxy *) river_xkb_bindings_v1), 0, seat, NULL, keysym, modifiers);

	return (struct river_xkb_binding_v1 *) id;
}

/**
 * @ingroup iface_river_xkb_bindings_v1
 *
 * Create an object to manage seat-specific xkb bindings state.
 *
 * It is a protocol error to make this request more than once for a given
 * river_seat_v1 object.
 */
static inline struct river_xkb_bindings_seat_v1 *
river_xkb_bindings_v1_get_seat(struct river_xkb_bindings_v1 *river_xkb_bindings_v1, struct river_seat_v1 *seat)
{
	struct wl_proxy *id;

	id = wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_bindings_v1,
			 RIVER_XKB_BINDINGS_V1_GET_SEAT, &river_xkb_bindings_seat_v1_interface, wl_proxy_get_version((struct wl_proxy *) river_xkb_bindings_v1), 0, NULL, seat);

	return (struct river_xkb_bindings_seat_v1 *) id;
}

/**
 * @ingroup iface_river_xkb_binding_v1
 * @struct river_xkb_binding_v1_listener
 */
struct river_xkb_binding_v1_listener {
	/**
	 * the key triggering the binding has been pressed
	 *
	 * This event indicates that the physical key triggering the
	 * binding has been pressed.
	 *
	 * This event will be followed by a manage_start event after all
	 * other new state has been sent by the server.
	 *
	 * The compositor should wait for the manage sequence to complete
	 * before processing further input events. This allows the window
	 * manager client to, for example, modify key bindings and keyboard
	 * focus without racing against future input events. The window
	 * manager should of course respond as soon as possible as the
	 * capacity of the compositor to buffer incoming input events is
	 * finite.
	 */
	void (*pressed)(void *data,
			struct river_xkb_binding_v1 *river_xkb_binding_v1);
	/**
	 * the key triggering the binding has been released
	 *
	 * This event indicates that the physical key triggering the
	 * binding has been released.
	 *
	 * Releasing the modifiers for the binding without releasing the
	 * "main" physical key that produces the bound keysym does not
	 * trigger the release event. This event is sent when the "main"
	 * key is released, even if the modifiers have changed since the
	 * pressed event.
	 *
	 * This event will be followed by a manage_start event after all
	 * other new state has been sent by the server.
	 *
	 * The compositor should wait for the manage sequence to complete
	 * before processing further input events. This allows the window
	 * manager client to, for example, modify key bindings and keyboard
	 * focus without racing against future input events. The window
	 * manager should of course respond as soon as possible as the
	 * capacity of the compositor to buffer incoming input events is
	 * finite.
	 */
	void (*released)(void *data,
			 struct river_xkb_binding_v1 *river_xkb_binding_v1);
	/**
	 * repeating should be stopped
	 *
	 * This event indicates that repeating should be stopped for the
	 * binding if the window manager has been repeating some action
	 * since the pressed event.
	 *
	 * This event is generally sent when some other (possible unbound)
	 * key is pressed after the pressed event is sent and before the
	 * released event is sent for this binding.
	 *
	 * This event will be followed by a manage_start event after all
	 * other new state has been sent by the server.
	 * @since 2
	 */
	void (*stop_repeat)(void *data,
			    struct river_xkb_binding_v1 *river_xkb_binding_v1);
};

/**
 * @ingroup iface_river_xkb_binding_v1
 */
static inline int
river_xkb_binding_v1_add_listener(struct river_xkb_binding_v1 *river_xkb_binding_v1,
				  const struct river_xkb_binding_v1_listener *listener, void *data)
{
	return wl_proxy_add_listener((struct wl_proxy *) river_xkb_binding_v1,
				     (void (**)(void)) listener, data);
}

#define RIVER_XKB_BINDING_V1_DESTROY 0
#define RIVER_XKB_BINDING_V1_SET_LAYOUT_OVERRIDE 1
#define RIVER_XKB_BINDING_V1_ENABLE 2
#define RIVER_XKB_BINDING_V1_DISABLE 3

/**
 * @ingroup iface_river_xkb_binding_v1
 */
#define RIVER_XKB_BINDING_V1_PRESSED_SINCE_VERSION 1
/**
 * @ingroup iface_river_xkb_binding_v1
 */
#define RIVER_XKB_BINDING_V1_RELEASED_SINCE_VERSION 1
/**
 * @ingroup iface_river_xkb_binding_v1
 */
#define RIVER_XKB_BINDING_V1_STOP_REPEAT_SINCE_VERSION 2

/**
 * @ingroup iface_river_xkb_binding_v1
 */
#define RIVER_XKB_BINDING_V1_DESTROY_SINCE_VERSION 1
/**
 * @ingroup iface_river_xkb_binding_v1
 */
#define RIVER_XKB_BINDING_V1_SET_LAYOUT_OVERRIDE_SINCE_VERSION 1
/**
 * @ingroup iface_river_xkb_binding_v1
 */
#define RIVER_XKB_BINDING_V1_ENABLE_SINCE_VERSION 1
/**
 * @ingroup iface_river_xkb_binding_v1
 */
#define RIVER_XKB_BINDING_V1_DISABLE_SINCE_VERSION 1

/** @ingroup iface_river_xkb_binding_v1 */
static inline void
river_xkb_binding_v1_set_user_data(struct river_xkb_binding_v1 *river_xkb_binding_v1, void *user_data)
{
	wl_proxy_set_user_data((struct wl_proxy *) river_xkb_binding_v1, user_data);
}

/** @ingroup iface_river_xkb_binding_v1 */
static inline void *
river_xkb_binding_v1_get_user_data(struct river_xkb_binding_v1 *river_xkb_binding_v1)
{
	return wl_proxy_get_user_data((struct wl_proxy *) river_xkb_binding_v1);
}

static inline uint32_t
river_xkb_binding_v1_get_version(struct river_xkb_binding_v1 *river_xkb_binding_v1)
{
	return wl_proxy_get_version((struct wl_proxy *) river_xkb_binding_v1);
}

/**
 * @ingroup iface_river_xkb_binding_v1
 *
 * This request indicates that the client will no longer use the xkb key
 * binding object and that it may be safely destroyed.
 */
static inline void
river_xkb_binding_v1_destroy(struct river_xkb_binding_v1 *river_xkb_binding_v1)
{
	wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_binding_v1,
			 RIVER_XKB_BINDING_V1_DESTROY, NULL, wl_proxy_get_version((struct wl_proxy *) river_xkb_binding_v1), WL_MARSHAL_FLAG_DESTROY);
}

/**
 * @ingroup iface_river_xkb_binding_v1
 *
 * Specify an xkb layout that should be used to translate key events for
 * the purpose of triggering this key binding irrespective of the currently
 * active xkb layout.
 *
 * The layout argument is a 0-indexed xkbcommon layout number for the
 * keyboard that generated the key event.
 *
 * If this request is never made, the currently active xkb layout of the
 * keyboard that generated the key event will be used.
 *
 * This request modifies window management state and may only be made as
 * part of a manage sequence, see the river_window_manager_v1 description.
 */
static inline void
river_xkb_binding_v1_set_layout_override(struct river_xkb_binding_v1 *river_xkb_binding_v1, uint32_t layout)
{
	wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_binding_v1,
			 RIVER_XKB_BINDING_V1_SET_LAYOUT_OVERRIDE, NULL, wl_proxy_get_version((struct wl_proxy *) river_xkb_binding_v1), 0, layout);
}

/**
 * @ingroup iface_river_xkb_binding_v1
 *
 * This request should be made after all initial configuration has been
 * completed and the window manager wishes the key binding to be able to be
 * triggered.
 *
 * This request modifies window management state and may only be made as
 * part of a manage sequence, see the river_window_manager_v1 description.
 */
static inline void
river_xkb_binding_v1_enable(struct river_xkb_binding_v1 *river_xkb_binding_v1)
{
	wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_binding_v1,
			 RIVER_XKB_BINDING_V1_ENABLE, NULL, wl_proxy_get_version((struct wl_proxy *) river_xkb_binding_v1), 0);
}

/**
 * @ingroup iface_river_xkb_binding_v1
 *
 * This request may be used to temporarily disable the key binding. It may
 * be later re-enabled with the enable request.
 *
 * This request modifies window management state and may only be made as
 * part of a manage sequence, see the river_window_manager_v1 description.
 */
static inline void
river_xkb_binding_v1_disable(struct river_xkb_binding_v1 *river_xkb_binding_v1)
{
	wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_binding_v1,
			 RIVER_XKB_BINDING_V1_DISABLE, NULL, wl_proxy_get_version((struct wl_proxy *) river_xkb_binding_v1), 0);
}

/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 * @struct river_xkb_bindings_seat_v1_listener
 */
struct river_xkb_bindings_seat_v1_listener {
	/**
	 * an unbound key press event was eaten
	 *
	 * An unbound key press event was eaten due to the
	 * ensure_next_key_eaten request.
	 *
	 * This event will be followed by a manage_start event after all
	 * other new state has been sent by the server.
	 * @since 2
	 */
	void (*ate_unbound_key)(void *data,
				struct river_xkb_bindings_seat_v1 *river_xkb_bindings_seat_v1);
};

/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 */
static inline int
river_xkb_bindings_seat_v1_add_listener(struct river_xkb_bindings_seat_v1 *river_xkb_bindings_seat_v1,
					const struct river_xkb_bindings_seat_v1_listener *listener, void *data)
{
	return wl_proxy_add_listener((struct wl_proxy *) river_xkb_bindings_seat_v1,
				     (void (**)(void)) listener, data);
}

#define RIVER_XKB_BINDINGS_SEAT_V1_DESTROY 0
#define RIVER_XKB_BINDINGS_SEAT_V1_ENSURE_NEXT_KEY_EATEN 1
#define RIVER_XKB_BINDINGS_SEAT_V1_CANCEL_ENSURE_NEXT_KEY_EATEN 2

/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 */
#define RIVER_XKB_BINDINGS_SEAT_V1_ATE_UNBOUND_KEY_SINCE_VERSION 2

/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 */
#define RIVER_XKB_BINDINGS_SEAT_V1_DESTROY_SINCE_VERSION 2
/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 */
#define RIVER_XKB_BINDINGS_SEAT_V1_ENSURE_NEXT_KEY_EATEN_SINCE_VERSION 2
/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 */
#define RIVER_XKB_BINDINGS_SEAT_V1_CANCEL_ENSURE_NEXT_KEY_EATEN_SINCE_VERSION 2

/** @ingroup iface_river_xkb_bindings_seat_v1 */
static inline void
river_xkb_bindings_seat_v1_set_user_data(struct river_xkb_bindings_seat_v1 *river_xkb_bindings_seat_v1, void *user_data)
{
	wl_proxy_set_user_data((struct wl_proxy *) river_xkb_bindings_seat_v1, user_data);
}

/** @ingroup iface_river_xkb_bindings_seat_v1 */
static inline void *
river_xkb_bindings_seat_v1_get_user_data(struct river_xkb_bindings_seat_v1 *river_xkb_bindings_seat_v1)
{
	return wl_proxy_get_user_data((struct wl_proxy *) river_xkb_bindings_seat_v1);
}

static inline uint32_t
river_xkb_bindings_seat_v1_get_version(struct river_xkb_bindings_seat_v1 *river_xkb_bindings_seat_v1)
{
	return wl_proxy_get_version((struct wl_proxy *) river_xkb_bindings_seat_v1);
}

/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 *
 * This request indicates that the client will no longer use the object and
 * that it may be safely destroyed.
 */
static inline void
river_xkb_bindings_seat_v1_destroy(struct river_xkb_bindings_seat_v1 *river_xkb_bindings_seat_v1)
{
	wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_bindings_seat_v1,
			 RIVER_XKB_BINDINGS_SEAT_V1_DESTROY, NULL, wl_proxy_get_version((struct wl_proxy *) river_xkb_bindings_seat_v1), WL_MARSHAL_FLAG_DESTROY);
}

/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 *
 * Ensure that the next non-modifier key press and corresponding release
 * events for this seat are not sent to the currently focused surface.
 *
 * If the next non-modifier key press triggers a binding, the
 * pressed/released events are sent to the river_xkb_binding_v1 object as
 * usual.
 *
 * If the next non-modifier key press does not trigger a binding, the
 * ate_unbound_key event is sent instead.
 *
 * Rationale: the window manager may wish to implement "chorded"
 * keybindings where triggering a binding activates a "submap" with a
 * different set of keybindings. Without a way to eat the next key
 * press event, there is no good way for the window manager to know that it
 * should error out and exit the submap when a key not bound in the submap
 * is pressed.
 *
 * This request modifies window management state and may only be made as
 * part of a manage sequence, see the river_window_manager_v1 description.
 */
static inline void
river_xkb_bindings_seat_v1_ensure_next_key_eaten(struct river_xkb_bindings_seat_v1 *river_xkb_bindings_seat_v1)
{
	wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_bindings_seat_v1,
			 RIVER_XKB_BINDINGS_SEAT_V1_ENSURE_NEXT_KEY_EATEN, NULL, wl_proxy_get_version((struct wl_proxy *) river_xkb_bindings_seat_v1), 0);
}

/**
 * @ingroup iface_river_xkb_bindings_seat_v1
 *
 * This requests cancels the effect of the latest ensure_next_key_eaten
 * request if no key has been eaten due to the request yet. This request
 * has no effect if a key has already been eaten or no
 * ensure_next_key_eaten was made.
 *
 * Rationale: the window manager may wish cancel an uncompleted "chorded"
 * keybinding after a timeout of a few seconds. Note that since this
 * timeout use-case requires the window manager to trigger a manage sequence
 * with the river_window_manager_v1.manage_dirty request it is possible that
 * the ate_unbound_key key event may be sent before the window manager has
 * a chance to make the cancel_ensure_next_key_eaten request.
 *
 * This request modifies window management state and may only be made as
 * part of a manage sequence, see the river_window_manager_v1 description.
 */
static inline void
river_xkb_bindings_seat_v1_cancel_ensure_next_key_eaten(struct river_xkb_bindings_seat_v1 *river_xkb_bindings_seat_v1)
{
	wl_proxy_marshal_flags((struct wl_proxy *) river_xkb_bindings_seat_v1,
			 RIVER_XKB_BINDINGS_SEAT_V1_CANCEL_ENSURE_NEXT_KEY_EATEN, NULL, wl_proxy_get_version((struct wl_proxy *) river_xkb_bindings_seat_v1), 0);
}

#ifdef  __cplusplus
}
#endif

#endif